tests/snapshots/test_e2e__codegen@binary_ampersand.c.snap
---
source: tests/test_e2e.rs
expression: asm_ast
input_file: tests/test_programs/binary_ampersand.c
---
Program {
    function: Function {
        identifier: "main",
        instructions: [
            AllocateStack {
                stack_offset: -8,
            },
            Mov {
                source: Imm(
                    1,
                ),
                destination: Register(
                    R11,
                ),
            },
            Cmp {
                left: Imm(
                    0,
                ),
                right: Register(
                    R11,
                ),
            },
            JmpCC {
                condition: E,
                label: "and_false0",
            },
            Mov {
                source: Imm(
                    1,
                ),
                destination: Register(
                    R11,
                ),
            },
            Cmp {
                left: Imm(
                    2,
                ),
                right: Register(
                    R11,
                ),
            },
            Mov {
                source: Imm(
                    0,
                ),
                destination: Stack(
                    -4,
                ),
            },
            SetCC {
                condition: L,
                operand: Stack(
                    -4,
                ),
            },
            Cmp {
                left: Imm(
                    0,
                ),
                right: Stack(
                    -4,
                ),
            },
            JmpCC {
                condition: E,
                label: "and_false0",
            },
            Mov {
                source: Imm(
                    1,
                ),
                destination: Stack(
                    -8,
                ),
            },
            Jmp {
                label: "and_end1",
            },
            Label(
                "and_false0",
            ),
            Mov {
                source: Imm(
                    0,
                ),
                destination: Stack(
                    -8,
                ),
            },
            Label(
                "and_end1",
            ),
            Mov {
                source: Stack(
                    -8,
                ),
                destination: Register(
                    AX,
                ),
            },
            Ret,
        ],
    },
}
